tests/fixtures/negative/release-engineering/test-fixture-accessed-from-production/app/src/main/kotlin/com/example/fixtures/NestedMention.kt
package com.example.fixtures

class NestedMention {
    val unresolved: NestedFixture? = null
}

